--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -481,6 +481,22 @@
 		}
 	}
 
+	// WeChat Payment Box
+	// -----------------------------------
+	.wechat-payment-box {
+		.payment-box__content {
+			// WeChat Pay QR code Display
+			.checkout__wechat-qrcode {
+				text-align: center;
+				margin-bottom: 12px;
+			}
+			.checkout__wechat-qrcode-redirect {
+				color: $gray-text-min;
+				font-size: 12px;
+			}
+		}
+	}
+
 	// Supporting Text / Fine Print
 	// -----------------------------------
 	.supporting-text {
@@ -633,7 +649,8 @@
 	&.bancontact,
 	&.p24,
 	&.alipay,
-	&.eps {
+	&.eps,
+	&.wechat {
 		margin-left: 1em;
 	}
 
@@ -885,6 +902,7 @@
 
 	.checkout__alipay {
 		width: 100px;
+		height: 24px;
 	}
 
 	.checkout__eps {
@@ -910,6 +928,12 @@
 		width: 50px;
 		margin: -20px 0;
 	}
+
+	.checkout__wechat {
+		height: 24px;
+		margin-right: 5px;
+	}
+
 
 	.select-dropdown__item-text {
 		top: 4px;
