--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -495,6 +495,11 @@
 				font-size: 12px;
 			}
 		}
+
+		form.is-loading {
+			opacity: 0.5;
+			pointer-events: none;
+		}
 	}
 
 	// Supporting Text / Fine Print
