SDK: try using CSS modules

--- a/client/gutenberg/extensions/editor-notes/style.scss
+++ b/client/gutenberg/extensions/editor-notes/style.scss
@@ -1,6 +1,6 @@
 @import '../../../../assets/stylesheets/shared/_colors.scss';
 
-.wp-block-a8c-editor-notes__box {
+.box {
 	background-color: lighten( $alert-red, 40% );
 	border-color: $alert-red;
 }
